k3s/notification-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: tickrush
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
